# cman

./: CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  lint.sh  pre-commit.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: main.cpp
src/data/: help  init  init-hint
src/lib/: utils.hpp
src/lib/command/: command.cpp  command.hpp  init.cpp
src/lib/reader/: reader.cpp  reader.hpp
src/tests/: command.ut.cpp  convert_args.ut.cpp  reader.ut.cpp
